[package]
name = "whist_browser"
version = "0.1.0"
authors = ["Whist Team"]
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/Whist-Team/Whist-Browser"

[profile.dev]
opt-level = 1
debug = 0

[profile.dev.package."*"]
opt-level = 3

[profile.coverage]
inherits = "test"
debug = 2

[profile.release]
opt-level = "z"
debug = 0
lto = true
strip = "debuginfo"
codegen-units = 1

[dependencies]
bevy_egui = { version = "0.20.2", default-features = false }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
semver = { version = "1.0", features = ["serde"] }
tokio = { version = "1", default-features = false, features = ["sync"] }
futures = "0.3"

[dependencies.bevy]
version = "0.10.0"
default-features = false
features = [
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png"
]

[target.'cfg(not(target_family = "wasm"))'.dependencies.bevy]
version = "0.10.0"
default-features = false
features = ["x11", "wayland", "filesystem_watcher"]

[target.'cfg(target_family = "wasm")'.dependencies.getrandom]
version = "0.2"
features = ["js"]

[target.'cfg(not(target_family = "wasm"))'.dependencies.async-compat]
version = "0.2"

[target.'cfg(target_family = "wasm")'.dependencies.gloo-net]
version = "0.2"
default-features = false
features = ["json", "websocket"]

[target.'cfg(target_family = "wasm")'.dependencies.gloo-utils]
version = "0.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies.tokio-tungstenite]
version = "0.18"

[dev-dependencies]
pretty_assertions = "1"
wiremock = "0.5"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "ws_echo_server"
path = "examples/ws_echo_server.rs"

[[example]]
name = "ws_client"
path = "examples/ws_client.rs"
