[package]
name = "whist_browser"
version = "0.1.0"
authors = ["Whist Team"]
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/Whist-Team/Whist-Browser"

# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in debug mode for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in release mode at the cost of compile time.
# Also optimize for size because trunk uses this for distribution
[profile.release]
codegen-units = 1
lto = true # "fat"
# Optimize with size in mind (also try "s", sometimes it is better).
opt-level = "z"
# Strip all debugging information from the binary to reduce file size.
strip = true # "symbols" which is "debuginfo" + rest of the symbols
debug = 0

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

# for test with coverage
[profile.coverage]
inherits = "test"
debug = "full"

[features]
dev = [
    "bevy/dynamic_linking",
    "bevy/bevy_debug_stepping",
]

[dependencies]
bevy = { version = "0.15", features = ["wayland", "asset_processor"] }
bevy_egui = { version = "0.30", default-features = false, features = ["render"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "1", features = ["serde"] }
tokio = { version = "1", default-features = false, features = ["sync"] }
futures = "0.3"

# keep the following in sync with Bevy's dependencies
#winit = { version = "0.30", default-features = false }
#image = { version = "0.25", default-features = false }

# This greatly improves WGPU's performance due to its heavy use of trace! calls
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

[target.'cfg(target_family = "wasm")'.dependencies.getrandom]
version = "0.2"
features = ["js"]

[target.'cfg(not(target_family = "wasm"))'.dependencies.async-compat]
version = "0.2"

[target.'cfg(target_family = "wasm")'.dependencies.gloo-net]
version = "0.6"
default-features = false
features = ["json", "websocket"]

[target.'cfg(target_family = "wasm")'.dependencies.gloo-utils]
version = "0.2"

[target.'cfg(not(target_family = "wasm"))'.dependencies.tokio-tungstenite]
version = "0.24"
features = ["url"]

[dev-dependencies]
pretty_assertions = "1"
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "ws_echo_server"
path = "examples/ws_echo_server.rs"

[[example]]
name = "ws_client"
path = "examples/ws_client.rs"
